add home page and edit beer show page

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @beer.name %></h1>
 <h3>Brewery: <%= link_to @beer.brewery.name, brewery_path(@beer.brewery) %></h3>
-<h3>Style: <%= @beer.category.name %></h3>
+<h3>Style: <%= link_to @beer.category.name, category_path(@beer.category) %></h3>
 <h3>ABV: <%= @beer.abv%> </h3>
-<p>Description: <%= @beer.description %></p>
+<h3>Description: </h3>
+<p><%= @beer.description %></p>
