--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,12 @@
-<h1>User Show Page</h1>
+<h1><%= @user.first_name %>'s Beers</h1>
+
+<% if !@user.beers.empty? %>
+  <h4>Your Beers</h4>
+  <ul>
+    <% @user.beers.each do |beer| %>
+      <li><%= link_to beer.name, beer_path(beer) %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <h4>You don't have any beers!</h4>
+<% end %>
