add basic nav to home page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,5 @@
   </ul>
 <% else %>
   <h4>You don't have any beers!</h4>
+  <p>This is button to click on to add a beer to your collection</p>
 <% end %>
