--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -1,4 +1,19 @@
 <%= form_for(beer) do |f| %>
+
+  <% if beer.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(beer.errors.count, "error") %> prohibited this beer from being saved:
+      </h2>
+
+      <ul>
+      <% beer.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :name %>
   <%= f.text_field :name %> <br> </br>
 
