--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -17,17 +17,31 @@
   <%= f.label :name %>
   <%= f.text_field :name %> <br> </br>
 
-  <%= f.label :brewery %>
-  <%= f.collection_select :brewery, Brewery.all, :id, :name %> <br> </br>
-
-  <%= f.label :category %>
-  <%= f.collection_select :category, Category.all, :id, :name %> <br> </br>
-
   <%= f.label :description %>
   <%= f.text_area :description %> <br> </br>
 
   <%= f.label :abv %>
   <%= f.text_field :abv %> <br> </br>
+
+  <!-- text field with auto complete, also drop down menu -->
+  <!-- will need to convert this to a nested form -->
+  <%= f.label :brewery_name %>
+  <%= f.text_field :brewery_name, list: "breweries_autocomplete" %>
+  <datalist id="breweries_autocomplete">
+    <% Brewery.all.each do |brewery| %>
+      <option value="<%= brewery.name %>">
+    <% end %>
+  </datalist> <br> </br>
+
+  <!-- text field with auto complete, also drop down menu -->
+  <!-- will need to convert this to a nested form -->
+  <%= f.label :category_name %>
+  <%= f.text_field :category_name, list: "categories_autocomplete" %>
+  <datalist id="categories_autocomplete">
+    <% Category.all.each do |category| %>
+      <option value="<%= category.name %>">
+    <% end %>
+  </datalist> <br> </br>
 
   <%= f.submit "Add Beer" %>
 <% end %>
