--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,4 +4,8 @@
   <li><%= link_to "Sign In", new_session_path %></li>
   <li><%= link_to "Breweries", breweries_path %></li>
   <li><%= link_to "Categories", categories_path %></li>
+  <% if current_user %>
+  <li><%= link_to "Log Out", signout_path, method: :delete%>
+  </li>
+  <% end %>
 </ul>
