--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to BeerMe</h1>
 <ul>
   <li><%= link_to "Sign Up", new_user_path %></li>
-  <li><%= link_to "Sign In", new_session_path %></li>
+  <li><%= link_to "Sign In", signin_path %></li>
   <li><%= link_to "Breweries", breweries_path %></li>
   <li><%= link_to "Categories", categories_path %></li>
   <% if current_user %>
