--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,6 +2,7 @@
   <% if current_user %>
     <li><%= link_to "Log Out", signout_path, method: :delete%>
     </li>
+    <li><%= link_to "Add New Beer", new_beer_path %></li>
   <% else %>
     <li><%= link_to "Sign Up", new_user_path %></li>
     <li><%= link_to "Sign In", signin_path %></li>
