create beers#index with category and brewery filters

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,8 +7,7 @@
     <li><%= link_to "Sign Up", new_user_path %></li>
     <li><%= link_to "Sign In", signin_path %></li>
   <% end %>
-
+  <li><%= link_to "Beers", beers_path %></li>
   <li><%= link_to "Breweries", breweries_path %></li>
   <li><%= link_to "Categories", categories_path %></li>
-
 </ul>
