--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,8 +2,23 @@
 <p><%= @category.description %></p>
 
 <h3>Beers</h3>
-<ul>
-  <% @category.beers.each do |beer| %>
-    <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
+
+<div class="filter">
+  <h4>Filter By Brewery</h4>
+  <%= form_tag("/categories/#{@category.id}", method: "get") do %>
+    <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
+    <%= submit_tag "Filter" %>
   <% end %>
-</ul>
+</div>
+
+<div class="list">
+  <% if @beers.empty? %>
+    <p><em>No results</em></p>
+  <% else %>
+    <ul>
+      <% @beers.each do |beer| %>
+        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
