--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="filter">
   <h4>Filter Beer List:</h4>
-  <%= form_tag("/beers", method: "get") do %>
+  <%= form_tag(user_beers_path(current_user), method: "get") do %>
     <%= label_tag "Category" %>
     <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
     <%= label_tag "Brewery" %>
