--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,32 +2,40 @@
 
 <div class="filter">
   <h4>Filter Beer List:</h4>
-  <%= form_tag(user_beers_path(current_user), method: "get") do %>
-    <%= label_tag "Category" %>
-    <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
-    <%= label_tag "Brewery" %>
-    <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
-    <%= submit_tag "Apply Filter" %>
+  <% if @userbeers %>
+    <%= form_tag(user_beers_path, method: "get") do %>
+      <%= label_tag "Category" %>
+      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
+      <%= label_tag "Brewery" %>
+      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
+      <%= submit_tag "Apply Filter" %>
+    <% end %>
+  <% else %>
+    <%= form_tag(beers_path, method: "get") do %>
+      <%= label_tag "Category" %>
+      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
+      <%= label_tag "Brewery" %>
+      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
+      <%= submit_tag "Apply Filter" %>
+    <% end %>
   <% end %>
 </div>
 
 <br> </br>
 <div class="list">
-  <% if @beers.empty? %>
-    <p><em>No results</em></p>
+  <% if @beers && !@beers.empty? %>
+    <ul>
+      <% @beers.each do |beer| %>
+        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
+      <% end %>
+    </ul>
+  <% elsif @userbeers && !@userbeers.empty? %>
+    <ul>
+      <% @userbeers.each do |beer| %>
+        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, user_beer_path(current_user, beer) %> (<%= beer.abv %>)</li>
+      <% end %>
+    </ul>
   <% else %>
-    <% if current_user %>
-      <ul>
-        <% @beers.each do |beer| %>
-          <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, user_beer_path(current_user, beer) %> (<%= beer.abv %>)</li>
-        <% end %>
-      </ul>
-    <% else %>
-      <ul>
-        <% @beers.each do |beer| %>
-          <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
-        <% end %>
-      </ul>
-    <% end %>
+    <p><em>No results</em></p>
   <% end %>
 </div>
