update Users table for OmniAuth

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
   <% else %>
     <li><%= link_to "Sign Up", new_user_path %></li>
     <li><%= link_to "Sign In", signin_path %></li>
-    <li><%= link_to ("Log In via Google+", '/auth/google_oauth2') %></li>
+    <li><%= link_to ("Sign In via Google+", '/auth/google_oauth2') %></li>
   <% end %>
   <li><%= link_to "All Beers", beers_path %></li>
   <li><%= link_to "All Breweries", breweries_path %></li>
