add random password for new OAuth users

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -23,6 +23,7 @@
 
 <br> </br>
 <div class="list">
+  <!-- need to figure out to refactor this so that the links go to the right place -->
   <% if @beers && !@beers.empty? %>
     <ul>
       <% @beers.each do |beer| %>
