update redirect paths in sessions and user controllers

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -24,6 +24,8 @@
 <br> </br>
 <div class="list">
   <!-- need to figure out to refactor this so that the links go to the right place -->
+  <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
+
   <% if @beers && !@beers.empty? %>
     <ul>
       <% @beers.each do |beer| %>
