--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -5,8 +5,6 @@
 <h3>Description: </h3>
 <p><%= @userbeer.description %></p>
 
-<% if @status %>
-  <h4>Info</h4>
-  <p>Status: <%= @status %></p>
-  <p>Notes: <%= @notes %></p>
-<% end %>
+<h4>Info</h4>
+<p>Status: <%= @userbeer.status if @usebeer.status %></p>
+<p>Notes: <%= @userbeer.notes if @usebeer.notes %></p>
