--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -7,6 +7,13 @@
 <p><%= @userbeer.beer.description %></p>
 
 <h3>My notes:</h3>
-<p><%= @userbeer.notes if @userbeer.notes %></p>
+<% if @userbeer.notes %>
+  <p><%= @userbeer.notes%></p>
+  <%= link_to "Edit", edit_user_user_beer_path(current_user, @userbeer) %>
+<% else %>
+  <%= form_tag user_user_beers_path %>
+    <%= text_area_tag :notes, nil, size: "60x5"%> <br>
+    <%= submit_tag "Add Note" %>
+<% end %>
 
 <!-- show edit link for notes -->
