--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @userbeer.beer.name %></h1>
-<h3>Status: <%= @userbeer.verbose_status %><%= render partial: "beers/beer_buttons", locals: {beer: @userbeer} %> </h3>
+<h3>Status: <%= @userbeer.verbose_status %><%= render partial: "beers/beer_buttons", locals: {user: current_user, beer: @userbeer} %> </h3>
 <h3>Brewery: <%= link_to @userbeer.beer.brewery.name, brewery_path(@userbeer.beer.brewery) %></h3>
 <h3>Style: <%= link_to @userbeer.beer.category.name, category_path(@userbeer.beer.category) %></h3>
 <h3>ABV: <%= @userbeer.beer.abv%> </h3>
