--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,19 @@
+<nav id="nav">
+  <% if current_user %>
+    <%= link_to "My Beers", user_user_beers_path(current_user) %>
+    <%= link_to "Add New Beer", new_beer_path(current_user) %>
+    <%= link_to "Log Out", signout_path, method: :delete%>
+  <% else %>
+    <%= link_to "Sign Up", new_user_path %>
+    <%= link_to "Sign In", signin_path %>
+    <%= link_to("Sign In via Google+", "/auth/google_oauth2") %>
+  <% end %>
+  <%= link_to "All Beers", beers_path %>
+  <%= link_to "All Breweries", breweries_path %>
+  <%= link_to "All Categories", categories_path %>
+</nav>
+
+<!--
 <ul>
   <% if current_user %>
     <li><%= link_to "My Beers", user_user_beers_path(current_user) %></li>
@@ -12,4 +28,4 @@
   <li><%= link_to "All Beers", beers_path %></li>
   <li><%= link_to "All Breweries", breweries_path %></li>
   <li><%= link_to "All Categories", categories_path %></li>
-</ul>
+</ul> -->
