--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,13 @@
   </head>
 
   <body>
+    <div class="inner">
+      <%= render partial: 'layouts/navbar' %>
+    </div>
+
     <section id="banner">
       <img src="../app/assets/images/beer_taps.jpeg" alt="beer taps">
     </section>
-    <%= render partial: 'layouts/navbar' %>
 
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: name %>
