--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Add a beer</h1>
-<%= render partial: 'beers/form', locals: {beer: @beer} %>
+<div class="inner">
+  <h1>Add a beer</h1>
+  <%= render partial: 'beers/form', locals: {beer: @beer} %>
+</div>
