--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,7 +1,9 @@
-<h1>Breweries</h1>
+<div class="inner">
+  <h1>Breweries</h1>
 
-<ul>
-  <% @breweries.each do |brewery| %>
-    <li><%= link_to brewery.name, brewery_path(brewery) %></li>
-  <% end %>
-</ul>
+  <ul>
+    <% @breweries.each do |brewery| %>
+      <li><%= link_to brewery.name, brewery_path(brewery) %></li>
+    <% end %>
+  </ul>
+</div>
