--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,25 +1,27 @@
-<h1><%= @brewery.name %></h1>
-<h4><%= @brewery.location %></h4>
-<p><%= @brewery.description %></p>
+<div class="inner">
+  <h1><%= @brewery.name %></h1>
+  <h4><%= @brewery.location %></h4>
+  <p><%= @brewery.description %></p>
 
-<h2>Beers</h2>
+  <h2>Beers</h2>
 
-<div class="filter">
-  <h4>Filter By Category</h4>
-  <%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
-    <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
-    <%= submit_tag "Filter" %>
-  <% end %>
-</div>
+  <div class="filter">
+    <h4>Filter By Category</h4>
+    <%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
+      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
+      <%= submit_tag "Filter" %>
+    <% end %>
+  </div>
 
-<div class="list">
-  <% if @beers.empty? %>
-    <p><em>No results</em></p>
-  <% else %>
-    <ul>
-      <% @beers.each do |beer| %>
-        <li><%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
-      <% end %>
-    </ul>
-  <% end %>
+  <div class="list">
+    <% if @beers.empty? %>
+      <p><em>No results</em></p>
+    <% else %>
+      <ul>
+        <% @beers.each do |beer| %>
+          <li><%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
 </div>
