--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,24 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a>
-					<nav id="nav">
-	           <%= render partial: 'layouts/navbar' %>
-					</nav>
-					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<!-- <a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a> -->
+				<nav id="nav">
+           <%= render partial: 'layouts/navbar' %>
+				</nav>
+				<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+			</div>
+		</header>
 
-    <%= yield %>
+    <div class="inner">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: name %>
+      <% end %>
+
+    </div>
+
+		<%= yield %>
 
 		<!-- Footer -->
 			<footer id="footer">
