--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,6 +1,8 @@
-<h1><%= @beer.name %></h1>
-<h3>Brewery: <%= link_to @beer.brewery.name, brewery_path(@beer.brewery) %></h3>
-<h3>Style: <%= link_to @beer.category.name, category_path(@beer.category) %></h3>
-<h3>ABV: <%= @beer.abv%> </h3>
-<h3>Description: </h3>
-<p><%= @beer.description %></p>
+<div class="inner">
+  <h1><%= @beer.name %></h1>
+  <h3>Brewery: <%= link_to @beer.brewery.name, brewery_path(@beer.brewery) %></h3>
+  <h3>Style: <%= link_to @beer.category.name, category_path(@beer.category) %></h3>
+  <h3>ABV: <%= @beer.abv%> </h3>
+  <h3>Description: </h3>
+  <p><%= @beer.description %></p>
+</div>
