--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -1,20 +1,22 @@
-<h1><%= @userbeer.beer.name %></h1>
-<h3>Status: <%= @userbeer.verbose_status %><%= render partial: "beers/beer_buttons", locals: {user: current_user, beer: @userbeer} %> </h3>
-<h3>Brewery: <%= link_to @userbeer.beer.brewery.name, brewery_path(@userbeer.beer.brewery) %></h3>
-<h3>Style: <%= link_to @userbeer.beer.category.name, category_path(@userbeer.beer.category) %></h3>
-<h3>ABV: <%= @userbeer.beer.abv%> </h3>
-<h3>Description: </h3>
-<p><%= @userbeer.beer.description %></p>
+<div class="inner">
+  <h1><%= @userbeer.beer.name %></h1>
+  <h3>Status: <%= @userbeer.verbose_status %><%= render partial: "beers/beer_buttons", locals: {user: current_user, beer: @userbeer} %> </h3>
+  <h3>Brewery: <%= link_to @userbeer.beer.brewery.name, brewery_path(@userbeer.beer.brewery) %></h3>
+  <h3>Style: <%= link_to @userbeer.beer.category.name, category_path(@userbeer.beer.category) %></h3>
+  <h3>ABV: <%= @userbeer.beer.abv%> </h3>
+  <h3>Description: </h3>
+  <p><%= @userbeer.beer.description %></p>
 
-<h3>My notes:</h3>
-<% if @userbeer.notes %>
-  <p><%= @userbeer.notes%></p>
-<% else %>
-  <%= form_tag user_user_beer_path(current_user.id, @userbeer.id) do %>
-    <%= hidden_field_tag('_method', 'put') %>
-    <%= text_area_tag "user_beer[notes]", nil, size: "60x5"%> <br>
-    <%= submit_tag "Add Note" %>
+  <h3>My notes:</h3>
+  <% if @userbeer.notes %>
+    <p><%= @userbeer.notes%></p>
+  <% else %>
+    <%= form_tag user_user_beer_path(current_user.id, @userbeer.id) do %>
+      <%= hidden_field_tag('_method', 'put') %>
+      <%= text_area_tag "user_beer[notes]", nil, size: "60x5"%> <br>
+      <%= submit_tag "Add Note" %>
+    <% end %>
   <% end %>
-<% end %>
 
-<!-- show edit link for notes -->
+  <!-- show edit link for notes -->
+</div>
