update sources in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,6 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<!-- <a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a> -->
 				<nav id="nav">
            <%= render partial: 'layouts/navbar' %>
 				</nav>
@@ -37,7 +36,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<div class="copyright">
-  					&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+  					&copy; BeerMe. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://www.pexels.com/">Pexels</a>.
 				  </div>
 				</div>
 			</footer>
