--- a/app/views/layouts/home_page.html.erb
+++ b/app/views/layouts/home_page.html.erb
@@ -17,7 +17,7 @@
 		<header id="header">
 			<div class="inner">
 				<nav id="nav">
-           <%= render partial: 'layouts/navbar' %>
+           <%= render partial: 'layouts/home_navbar' %>
 				</nav>
 				<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 			</div>
