--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -37,17 +37,17 @@
 <!-- Three -->
   <section id="three" class="wrapper align-center">
     <div class="inner">
-      <div class="flex flex-2">
+      <div class="flex flex-3">
         <article>
           <div class="image round">
             <img src="images/pic01.jpg" alt="Pic 01" />
           </div>
           <header>
-            <h3>Lorem ipsum<br /> dolor amet nullam</h3>
+            <h3>Beers<br /></h3>
           </header>
-          <p>Morbi in sem quis dui placerat ornare. Pellentesquenisi<br />euismod in, pharetra a, ultricies in diam sed arcu. Cras<br />consequat  egestas augue vulputate.</p>
+          <p>Explore our beers</p>
           <footer>
-            <a href="#" class="button">Learn More</a>
+            <%= link_to "View", beers_path, class: "button" %>
           </footer>
         </article>
         <article>
@@ -55,11 +55,23 @@
             <img src="images/pic02.jpg" alt="Pic 02" />
           </div>
           <header>
-            <h3>Sed feugiat<br /> tempus adipicsing</h3>
+            <h3>Breweries</h3>
           </header>
-          <p>Pellentesque fermentum dolor. Aliquam quam lectus<br />facilisis auctor, ultrices ut, elementum vulputate, nunc<br /> blandit ellenste egestagus commodo.</p>
+          <p>Check out our breweries</p>
           <footer>
-            <a href="#" class="button">Learn More</a>
+            <%= link_to "View", breweries_path, class: "button" %>
+          </footer>
+        </article>
+        <article>
+          <div class="image round">
+            <img src="images/pic02.jpg" alt="Pic 02" />
+          </div>
+          <header>
+            <h3>Categories</h3>
+          </header>
+          <p>Browse beer by category</p>
+          <footer>
+            <%= link_to "View", categories_path, class: "button" %>
           </footer>
         </article>
       </div>
