add font awesome

--- a/app/views/layouts/home_page.html.erb
+++ b/app/views/layouts/home_page.html.erb
@@ -4,7 +4,8 @@
 		<title>BeerMe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/stylesheets/application.css" />
+		<script src="https://use.fontawesome.com/10d3acd444.js"></script>
 
     <%= csrf_meta_tags %>
 
@@ -34,11 +35,12 @@
 				</div>
 			</footer>
 
+		<!-- not sure if these are necessary -->
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<!-- <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
