--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -8,7 +8,7 @@
       <div class="flex ">
 
         <div>
-          <span class="icon fa-car"></span>
+          <span class="icon fa-beer"></span>
           <h3>Live</h3>
           <!-- <p>Utilize our community database to find beers you like</p> -->
         </div>
@@ -39,9 +39,7 @@
     <div class="inner">
       <div class="flex flex-3">
         <article>
-          <div class="image round">
-            <img src="images/pic01.jpg" alt="Pic 01" />
-          </div>
+          <i class="icon fa fa-beer" aria-hidden="true"></i>
           <header>
             <h3>Beers<br /></h3>
           </header>
