--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
 		<title>BeerMe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/stylesheets/application.css" />
+		<script src="https://use.fontawesome.com/10d3acd444.js"></script>
 
     <%= csrf_meta_tags %>
 
