add icons to home page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -8,19 +8,17 @@
       <div class="flex ">
 
         <div>
-          <span class="icon fa-beer"></span>
           <h3>Live</h3>
           <!-- <p>Utilize our community database to find beers you like</p> -->
         </div>
 
         <div>
-          <span class="icon fa-camera"></span>
           <h3>Laugh</h3>
           <!-- <p>Read about beer</p> -->
         </div>
 
         <div>
-          <span class="icon fa-bug"></span>
+          <!-- <span class="icon fa-beer"></span> -->
           <h3>Beer</h3>
           <!-- <p>Nulla vitae mauris non felis</p> -->
         </div>
@@ -39,7 +37,7 @@
     <div class="inner">
       <div class="flex flex-3">
         <article>
-          <i class="icon fa fa-beer" aria-hidden="true"></i>
+          <i class="icon fa-beer fa-6" aria-hidden="true"></i>
           <header>
             <h3>Beers<br /></h3>
           </header>
@@ -49,9 +47,7 @@
           </footer>
         </article>
         <article>
-          <div class="image round">
-            <img src="images/pic02.jpg" alt="Pic 02" />
-          </div>
+          <i class="icon fa-building fa-6" aria-hidden="true"></i>
           <header>
             <h3>Breweries</h3>
           </header>
@@ -61,9 +57,7 @@
           </footer>
         </article>
         <article>
-          <div class="image round">
-            <img src="images/pic02.jpg" alt="Pic 02" />
-          </div>
+          <i class="icon fa-list fa-6" aria-hidden="true"></i>
           <header>
             <h3>Categories</h3>
           </header>
