--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,10 +5,12 @@
 
 <div class="filter">
   <h4>Filter By Brewery</h4>
-  <%= form_tag("/categories/#{@category.id}", method: "get") do %>
-    <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
-    <%= submit_tag "Filter" %>
-  <% end %>
+  <div class="select-wrapper 6u$ 12u$(medium)">
+    <%= form_tag("/categories/#{@category.id}", method: "get") do %>
+      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %> <br>
+      <%= submit_tag "Apply Filter" %>
+    <% end %>
+  </div>
 </div>
 
 <div class="list">
