--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -1,13 +1,21 @@
-<h1><%= current_user.first_name %>'s Beers</h1>
+<header class="align-center">
+	<h2><%= current_user.first_name %>'s Beers</h2>
+</header>
+
 
 <div class="filter">
   <h4>Filter Beer List:</h4>
   <% if @userbeers %>
     <%= form_tag(user_user_beers_path, method: "get") do %>
-      <%= label_tag "Category" %>
-      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
-      <%= label_tag "Brewery" %>
-      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
+      <div class="select-wrapper 6u$ 12u$(medium)">
+        <%= label_tag "Category" %>
+        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
+      </div>
+
+      <div class="select-wrapper 6u$ 12u$(medium)">
+        <%= label_tag "Brewery" %>
+        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %> <br>
+      </div>
       <%= submit_tag "Apply Filter" %>
     <% end %>
   <% end %>
