--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,6 +2,21 @@
 
 <div class="filter">
   <h4>Filter Beer List:</h4>
+  <%= form_tag(beers_path, method: "get") do %>
+    <div class="select-wrapper 6u$ 12u$(medium)">
+      <%= label_tag "Category" %>
+      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %>
+    </div>
+    <div class="select-wrapper 6u$ 12u$(medium)">
+      <%= label_tag "Brewery" %>
+      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
+    </div>
+    <%= submit_tag "Apply Filter" %>
+  <% end %>
+</div>
+
+<!-- <div class="filter">
+  <h4>Filter Beer List:</h4>
   <% if @userbeers %>
     <%= form_tag(user_beers_path, method: "get") do %>
       <%= label_tag "Category" %>
@@ -12,14 +27,18 @@
     <% end %>
   <% else %>
     <%= form_tag(beers_path, method: "get") do %>
-      <%= label_tag "Category" %>
-      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
-      <%= label_tag "Brewery" %>
-      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
+      <div class="select-wrapper 6u$ 12u$(medium)">
+        <%= label_tag "Category" %>
+        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
+      </div>
+      <div class="select-wrapper 6u$ 12u$(medium)">
+        <%= label_tag "Brewery" %>
+        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %> <br>
+      </div>
       <%= submit_tag "Apply Filter" %>
     <% end %>
   <% end %>
-</div>
+</div> -->
 
 <br> </br>
 <div class="list">
