--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -8,7 +8,7 @@
   <h4>Filter By Category</h4>
   <%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
     <div class="select-wrapper 6u$ 12u$(medium)">
-      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %> <br>
+      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %> <br>
     </div>
     <%= submit_tag "Apply Filter" %>
   <% end %>
