--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -9,12 +9,12 @@
     <%= form_tag(user_user_beers_path, method: "get") do %>
       <div class="select-wrapper 6u$ 12u$(medium)">
         <%= label_tag "Category" %>
-        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
+        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %>
       </div>
 
       <div class="select-wrapper 6u$ 12u$(medium)">
         <%= label_tag "Brewery" %>
-        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %> <br>
+        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
       </div>
       <%= submit_tag "Apply Filter" %>
     <% end %>
